# NCEPU-CV

./: .gitignore  CMakeLists.txt  README.md  main.cpp
armor/: ArmorDetector.cpp  ArmorDetector.h  CMakeLists.txt  main.cpp
calib/: CMakeLists.txt  calib.xml  cam_calib.cpp
pose/: CMakeLists.txt  CamCalib.cpp  CamCalib.h  PoseSolver.cpp  PoseSolver.h  main.cpp
